--- a/hector_baseline/CMakeLists.txt
+++ b/hector_baseline/CMakeLists.txt
@@ -40,6 +40,11 @@ endif()
 
 include_directories(include ${OCTOMAP_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
+find_package( PCL REQUIRED )
+include_directories(  ${catkin_INCLUDE_DIRS}  ${PCL_INCLUDE_DIRS} )
+link_directories(${PCL_LIBRARY_DIRS})
+add_definitions(${PCL_DEFINITIONS})
+
 add_executable(hector_baseline src/Explorer.cpp src/explorer_node.cpp)
 target_compile_options(hector_baseline PRIVATE ${OpenMP_FLAGS} ${CMAKE_CXX_FLAGS})
 target_link_libraries(hector_baseline ${OCTOMAP_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_LIBS})
