--- a/hector_baseline/package.xml
+++ b/hector_baseline/package.xml
@@ -18,6 +18,12 @@
   <depend>std_msgs</depend>
   <depend>octomap</depend>
   <depend>hector_moveit_actions</depend>
+  <build_depend>pcl_ros</build_depend>
+  <build_depend>pcl_conversions</build_depend>
+  <run_depend>pcl_ros</run_depend>
+  <run_depend>pcl_conversions</run_depend>
+  <build_depend>libpcl-all-dev</build_depend>
+  <run_depend>libpcl-all</run_depend>
   <export>
 
   </export>
