--- a/hector_baseline/package.xml
+++ b/hector_baseline/package.xml
@@ -20,10 +20,10 @@
   <depend>hector_moveit_actions</depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>pcl_conversions</run_depend>
+  <exec_depend>pcl_ros</exec_depend>
+  <exec_depend>pcl_conversions</exec_depend>
   <build_depend>libpcl-all-dev</build_depend>
-  <run_depend>libpcl-all</run_depend>
+  <exec_depend>libpcl-all</exec_depend>
   <export>
 
   </export>
