--- a/hector_baseline/package.xml
+++ b/hector_baseline/package.xml
@@ -18,12 +18,12 @@
   <depend>std_msgs</depend>
   <depend>octomap</depend>
   <depend>hector_moveit_actions</depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <exec_depend>pcl_ros</exec_depend>
-  <exec_depend>pcl_conversions</exec_depend>
-  <build_depend>libpcl-all-dev</build_depend>
-  <exec_depend>libpcl-all</exec_depend>
+  <depend>pcl_ros</depend>
+  <depend>pcl_conversions</depend>
+  <!-- <exec_depend>pcl_ros</exec_d/epend> -->
+  <!-- <exec_depend>pcl_conversions</exec_depend> -->
+  <depend>libpcl-all-dev</depend>
+  <!-- <exec_depend>libpcl-all</exec_depend> -->
   <export>
 
   </export>
